@@ -31,6 +31,7 @@ namespace traits{
 		typedef typename r_vector_iterator<RTYPE>::type iterator ;
 		typedef typename r_vector_const_iterator<RTYPE>::type const_iterator ;
 		typedef typename r_vector_proxy<RTYPE>::type proxy ;
+		typedef typename r_vector_const_proxy<RTYPE>::type const_proxy ;
 		typedef typename storage_type<RTYPE>::type storage_type ;
 		
 		r_vector_cache() : start(0){} ;
@@ -56,6 +57,7 @@ namespace traits{
 		typedef typename r_vector_iterator<RTYPE>::type iterator ;
 		typedef typename r_vector_const_iterator<RTYPE>::type const_iterator ;
 		typedef typename r_vector_proxy<RTYPE>::type proxy ;
+		typedef typename r_vector_const_proxy<RTYPE>::type const_proxy ;
 		
 		proxy_cache(): p(0){}
 		~proxy_cache(){}
@@ -66,8 +68,11 @@ namespace traits{
 		inline iterator get() const { return iterator( proxy(*p, 0 ) ) ;}
 		inline const_iterator get_const() const { return const_iterator( *p ) ;}
 		
-		inline proxy ref() const { return proxy(*p,0) ; }
-		inline proxy ref(int i) const { return proxy(*p,i);}
+		inline proxy ref() { return proxy(*p,0) ; }
+		inline proxy ref(int i) { return proxy(*p,i);}
+		
+		inline const_proxy ref() const { return const_proxy(*p,0) ; }
+		inline const_proxy ref(int i) const { return const_proxy(*p,i);}
 		
 		private:
 			VECTOR* p ;
